--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="code-snippet">
         <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=3024-night&wt=sharp&l=javascript&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fsimple-ui-component.netlify.app%252Fstyle.css%2522%252F%253E%250A%250A%252F%252F%2520cdn%2520link%250A%250A%2540import%2520url%28%27https%253A%252F%252Fsimple-ui-component.netlify.app%252Fstyle.css%27%29"
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=3024-night&wt=sharp&l=javascript&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fmagicuicss.netlify.app/%252Fstyle.css%2522%252F%253E%250A%250A%252F%252F%2520cdn%2520link%250A%250A%2540import%2520url%28%27https%253A%252F%252Fmagicuicss.netlify.app/%252Fstyle.css%27%29"
   
   sandbox="allow-scripts allow-same-origin">
 </iframe>
